# CANN-driver

./: compile_flags.txt
src/sdk_driver/dms/devmng/drv_devmng/drv_devmng_host/ascend910/: devdrv_manager.c
src/sdk_driver/pbl/drv_davinci_intf/drv_davinci_intf_host/: davinci_intf_init.c
src/sdk_driver/svm/v2/common/: svm_module_ops.c
src/sdk_driver/svm/v2/master/comm/: devmm_proc_info.c
src/sdk_driver/trsdrv/trs/trs_core/: trs_fops.c  trs_hw_sqcq.c
test/: monitor.c  monitor0.c  signal.c
test/test/: Makefile
test/test_kernel/: CMakeLists.txt  hello_world.cpp  main.cpp
test/test_malloc/: main.cpp  test_malloc  test_malloc.cpp
